...
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_question_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/qdetails_title"/>


    <Button
        android:id="@+id/play_note_button"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
...
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answers_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/question_details_answer_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
