<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_questions_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/course_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/highlight"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_forum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/forum_item"
            android:clickable="true"

            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>