<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="10dp"
    android:id="@+id/qdetails_answer_item">

    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_question_details"
        android:textSize="30sp"
        android:id="@+id/qdetails_question_content"/> -->

    <com.github.ybecker.epforuml.features.latex.MathView
        android:id="@+id/qdetails_question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:setTextSize="16sp"
        app:setTextColor="@color/textColor"
        app:setText="@string/new_question_details" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_vid_frameLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_question"
            android:contentDescription="@string/image"
            android:clickable="true"
            android:visibility="gone"/>

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:resize_mode="fixed_width"
            app:use_controller="true"
            android:clickable="true"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>