...
    >
    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/nav_home" />

        <item
            android:id="@+id/nav_courses"
            android:title="@string/courses"
            android:icon="@drawable/nav_courses" />

        <item
            android:id="@+id/nav_my_questions"
            android:title="@string/my_questions"
...
