...
                    android:layout_gravity="center"
                    android:layout_weight="2">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/addCourseName"
                        android:hint="@string/enter_course_name"
                        android:layout_gravity="center"
                        android:background="@color/fui_transparent"
                        android:textColorHint="@color/courseColor"
                        android:textSize="20sp"
                        android:layout_weight="2"
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/addCourseButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/new_chat"
                app:tint="@color/black"
                android:layout_gravity="center"
                android:backgroundTint="@color/even_more_background"
...
