...
                    android:layout_weight="1"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:text="@string/subscribe"/>

                <Switch
                    android:id="@+id/subscriptionSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

...
